@@ -26,9 +26,7 @@ group :development do
 end
 
 group :system_tests do
-  # For the oscap tests
-  gem 'nokogiri'
   gem 'beaker'
   gem 'beaker-rspec'
-  gem 'simp-beaker-helpers', ENV.fetch('SIMP_BEAKER_HELPERS_VERSION', ['>= 1.12.0', '< 2.0'])
+  gem 'simp-beaker-helpers', ENV.fetch('SIMP_BEAKER_HELPERS_VERSION', ['>= 1.13.0', '< 2.0'])
 end
